--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="BMC">
   <meta name="author" content="Valiant Hekert">
 
-  <link rel="stylesheet" href="codeheap/css.css?v=1.0">
+  <link rel="stylesheet" href="codeheap/css.css">
 
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
